# kim-lab-tools

./: .gitignore  CODE_OF_CONDUCT.md  README.md  pyproject.toml
analysis_results/: region_summary.csv  roi_area_analysis.csv  section_summary.csv
examples/: roi_area_analysis.py
kim_lab_tools/src/: __init__.py
kim_lab_tools/src/application/use_cases/analyzers/: __init__.py  intensity_analyzer.py  roi_area_analyzer.py
kim_lab_tools/src/application/use_cases/processors/: image_processor.py  region_counter.py  rsat_processor.py  tile_processor.py
kim_lab_tools/src/application/use_cases/trainers/: axon_segmentation_trainer.py  base_trainer.py
kim_lab_tools/src/core/base/: base.py  processors.py
kim_lab_tools/src/core/exceptions/: exceptions.py
kim_lab_tools/src/core/types/axon_segmentation/: types.py
kim_lab_tools/src/domain/: __init__.py
kim_lab_tools/src/domain/entities/: atlas.py  image.py  region.py
kim_lab_tools/src/domain/services/: __init__.py
kim_lab_tools/src/infrastructure/ml/datasets/: atlas_dataset.py  base_dataset.py
kim_lab_tools/src/infrastructure/ml/models/: __init__.py  brain_reg_unet.py  tissue_predictor.py
kim_lab_tools/src/infrastructure/utils/: box_utils.py
kim_lab_tools/src/infrastructure/utils/image/: image_ops.py  image_processing.py
kim_lab_tools/src/infrastructure/utils/visualization/: visualization.py
kim_lab_tools/src/presentation/cli/: annotation_viewer_cli.py  axon_segmentation_cli.py  dann_trainer_cli.py  data_cli.py  evaluation_cli.py  experiment_cli.py  intensity_cli.py  roi_area_cli.py  rsat_cli.py  stack_processor_cli.py
scripts/: roi_area_analysis.py
src/: __init__.py
src/kim_lab_tools/application/: __init__.py
src/kim_lab_tools/application/use_cases/analyzers/: __init__.py  roi_area_analyzer.py
src/kim_lab_tools/application/use_cases/trainers/: dann_trainer.py
src/kim_lab_tools/core/config/: config.py
src/kim_lab_tools/core/interfaces/: interfaces.py
src/presentation/cli/: atlas_cli.py  base.py  count_cli.py  filter_cli.py  overlay_cli.py  stack_cli.py  tile_cli.py
src/presentation/gui/: count_gui.py  eraser.py
src/presentation/viewers/: annotation_viewer.py  registration_viewer.py
src/presentation/widgets/: file_selector.py
src/tests/unit/: test_roi_area_analyzer.py
src/utils/: pkl_structure.py  pkl_viewer.py
tests/: test_roi_area_analyzer.py
(+32 files in other folders)
