[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kim-lab-tools"
version = "0.1.0"
description = "Tools for analyzing brain imaging data in the Kim Lab"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Adam Murray", email = "admmurra@ucsc.edu" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "isort>=5.0",
    "mypy>=0.900",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/kim-lab-tools"
Repository = "https://github.com/yourusername/kim-lab-tools.git"
Documentation = "https://github.com/yourusername/kim-lab-tools#readme"

[tool.hatch.build.targets.wheel]
packages = ["kim_lab_tools"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
select = ["E", "F", "B"]
ignore = []
line-length = 88
target-version = "py38" 